--- a/html/css/style.css
+++ b/html/css/style.css
@@ -33,3 +33,12 @@ td {
 th {
   padding: 0.5em;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto 
+  max-width: 200px;
+  width: 100%;
+  height: auto;
+}
