Better body with for narrow or very wide screens
i.e. use max-width not width

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2,7 +2,7 @@
 
 body {
   font-family: "Alegreya Sans", Helvatica, sans-serif;
-  width: 60%;
+  max-width: 18cm; // Roughly the width of an A4 paper - margins
   margin-left: auto;
   margin-right: auto;
 }
